pamc/src/tests/sample_code/should_succeed/multi_file/no_warnings/plus_commutative/src/nat.ph
use super.*;

pub type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}
