pamc/src/tests/sample_code/should_fail/ast_simplification/labeled_params/duplicate_labels/implicit_explicit.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let f = fun _(~x: Nat, x~y: Nat): Nat {
    Nat.O
};
